# xca

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  COPYRIGHT  CREDITS  CertDetail.ui  CertExtend.ui  CertView.cpp  CertView.h  CrlDetail.ui  CrlView.h  Dockerfile  ExportCert.cpp  ExportCert.h  ExportCert_UI.ui  ExportKey.cpp  ExportKey.h  ExportKey.ui  ExportKey_UI.ui  ExportTinyCA.h  ExportTinyCA_UI.ui  INSTALL  INSTALL.docker  INSTALL.mac  INSTALL.qmake  INSTALL.qt5  INSTALL.w32  INSTALL.w64  KeyDB.cpp  KeyDB.h  KeyDetail.ui  KeyDetailDlg.ui  KeyView.cpp  KeyView.h  Libtool.version  Local.mak.in  MainWindow.cpp  MainWindow.h  (+73 more)
.github/workflows/: cmake.yaml  flatpak.yaml
cmake/: database_schema.cmake  git_version.cmake  openssl_v_err.cmake  sphinx-documentation.cmake  text_header_file.cmake
darwin-cross/: build-darwin-toolchain.txt  gcc-5659.patch  odcctools.patch
debian/: changelog  control  copyright  debian.mak  dirs  docs  menu  postinst  rules
doc/: .gitignore  CMakeLists.txt  Makefile  code2html  conf.py.in  html.header  xca-doc.tgz  xca.1  xca.1.head  xca.1.options  xca.1.tail  xca.man  xca.sgml  xca_db_stat.1
doc/rst/: arguments.rst  certificate-input.rst  certificates.rst  changelog.rst  commandline.rst  common-actions.rst  database.rst  index.rst  introduction.rst  miscellaneous.rst  object-ids.rst  options.rst  privatekey.rst  requests.rst  revocationlist.rst  smartcard.rst  step-by-step.rst  template-crl.rst  template.rst
img/: .gitignore  CMakeLists.txt  Makefile  Schlussel.xcf  imgres.qrc  imgres.rcc  key.xpm  pergament.xcf  w32res.rc  xca-32x32.xpm  xca-mac-icon.icns
lang/: CMakeLists.txt  Makefile  es.po  fr.po  indent.xslt  po2ts.sh  sk.po  tr.po  xca.pot  xca.ts  xca_bg.ts  xca_de.ts  xca_en.ts  xca_es.ts  xca_fa.ts  xca_fr.ts  xca_hr.ts  xca_id.ts  xca_it.ts  xca_ja.ts  xca_ko.ts  xca_nl.ts  xca_pl.ts  xca_pt_BR.ts  xca_ru.ts  xca_sk.ts  xca_tr.ts  xca_zh.ts  xca_zh_CN.ts
lib/: BioByteArray.cpp  BioByteArray.h  CMakeLists.txt  Makefile  Makefile.in  Passwd.cpp  Passwd.h  PwDialogCore.cpp  PwDialogCore.h  XcaProgress.cpp  XcaProgress.h  XcaWarningCore.cpp  XcaWarningCore.h  arguments.cpp  arguments.h  asn1int.cpp  asn1int.h  asn1time.cpp  asn1time.h  base.h  base.h.in  base.h.win  builtin_curves.cpp  builtin_curves.h  cmdline.cpp  database_model.cpp  database_model.h  database_schema.cpp  db.cpp  db.h  db_base.cpp  db_base.h  db_crl.cpp  db_crl.h  db_dump.cpp  db_key.cpp  db_key.h  db_temp.cpp  db_temp.h  db_token.cpp  (+91 more)
m4/: ax_check_gnu_make.m4  xca_compile_test.m4
macdeployqt/: .gitignore  Makefile  macdeployqt.pro  main.cpp  shared.cpp  shared.h
misc/: .gitignore  CA.xca  CMakeLists.txt  ExportOptions.plist  HTTPS_client.xca  HTTPS_server.xca  Info.plist  Info.plist.in  Local.mak.mac  Local.mak.mac-native  Local.mak.w32  Makefile  PkgInfo  TLS_client.xca  TLS_server.xca  aia.txt  binary-hashes.json  build-mac.sh  build-w32.sh  build-w64.sh  copyright.rtf  de.hohnstaedt.xca.desktop  de.hohnstaedt.xca.metainfo.xml  de.hohnstaedt.xca.yaml  delspace.sh  dn.text  dn.txt  docker_start.sh  dynamic.wxs.in  eku.text  eku.txt  entitlement-appstore-compliant.plist  entitlement.plist  gen-binary-hash  git.release.something  lip11_aloaha_hack.diff  oids.text  oids.txt  openssl-0.9.8-mingw32-cross.patch  openssl-0.9.8d-mingw32-cross.patch  (+14 more)
release/: binary-hashes.json  build-mac.sh  build-w64.bat  build-w64.sh  flatpak.txt  gen-binary-hash  git.publish  git.release  git.release.something  github.release.py  osslsign.sh  release.txt
rpm/: xca.spec
test/: CMakeLists.txt  PwDialogMock.h  create_key.pl  export.cpp  im_export_key.pl  importPEM.cpp  main.cpp  main.h  newKey.cpp  opendb.pl  pem.cpp  renewal.cpp  validity.cpp
ui/: About.ui  CaProperties.ui  CertDetail.ui  CertExtend.ui  CrlDetail.ui  ExportCert.ui  ExportDer.ui  ExportDialog.ui  ExportKey.ui  ExportTinyCA.ui  Help.ui  ImportMulti.ui  ItemProperties.ui  KeyDetail.ui  MainWindow.ui  Makefile  Makefile.in  NewCrl.ui  NewKey.ui  NewX509.ui  OidResolver.ui  OpenDb.ui  Options.ui  PassRead.ui  PassWrite.ui  PwDialog.ui  ReqDetail.ui  RevocationList.ui  Revoke.ui  ScardDetail.ui  SearchPkcs11.ui  SelectToken.ui  TimeInput.ui  TrustState.ui  XcaDialog.ui  v3ext.ui
view/: CertView.cpp  CertView.h  CrlView.cpp  CrlView.h  KeyView.cpp  KeyView.h  MainWindowCrl.cpp  Makefile  Makefile.in  ReqView.cpp  ReqView.h  TempView.cpp  TempView.h  XcaListView.cpp  XcaListView.h  main.cpp
widgets/: CMakeLists.txt  CertDetail.cpp  CertDetail.h  CertExtend.cpp  CertExtend.h  CertTreeView.cpp  CertTreeView.h  CrlDetail.cpp  CrlDetail.h  CrlTreeView.cpp  CrlTreeView.h  ExportCert.cpp  ExportCert.h  ExportDer.cpp  ExportDer.h  ExportDialog.cpp  ExportDialog.h  ExportKey.cpp  ExportKey.h  ExportTinyCA.cpp  ExportTinyCA.h  FocusCombo.h  Help.cpp  Help.h  ImportMulti.cpp  ImportMulti.h  ItemCombo.h  KeyDetail.cpp  KeyDetail.h  KeyTreeView.cpp  KeyTreeView.h  MW_database.cpp  MW_help.cpp  MW_menu.cpp  MainWindow.cpp  MainWindow.h  MainWindowCrl.cpp  Makefile  Makefile.in  NewCrl.cpp  (+60 more)
xcf/: cert.xcf  dialog.xcf  icons.xcf  key.xcf  smartcard.xcf
